k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: collage-alarm
  labels:
    app.kubernetes.io/name: collage-alarm
